--- a/templates/dpo/input.html
+++ b/templates/dpo/input.html
@@ -1,16 +1,3 @@
-<style>
-  .bd-example-modal-lg .modal-dialog {
-    display: table;
-    position: relative;
-    margin: 0 auto;
-    top: calc(50% - 24px);
-  }
-
-  .bd-example-modal-lg .modal-dialog .modal-content {
-    background-color: transparent;
-    border: none;
-  }
-</style>
 <body>
   {%include "navpage.html"%}
   <div class="container">
@@ -30,18 +17,7 @@
       <button type="button" class="btn btn-primary" onclick="modal()">Submit</button>
     </form>
   </div>
-  <div
-    class="modal fade bd-example-modal-lg"
-    data-backdrop="static"
-    data-keyboard="false"
-    tabindex="-1"
-  >
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content" style="width: 48px">
-        <span class="fa fa-spinner fa-spin fa-3x"></span>
-      </div>
-    </div>
-  </div>
+  {%include "loading.html"%}
 </body>
 {%include "loadjs.html"%}
 <script>
