--- a/templates/loading.html
+++ b/templates/loading.html
@@ -16,6 +16,7 @@
   data-backdrop="static"
   data-keyboard="false"
   tabindex="-1"
+  id="modalLoading"
 >
   <div class="modal-dialog modal-sm">
     <div class="modal-content" style="width: 48px">
