--- a/templates/identify_faces.html
+++ b/templates/identify_faces.html
@@ -11,8 +11,19 @@
     <div class="container">
       <h3>Upload a picture and see if it's a picture of Wanted Person</h3>
       <form method="POST" enctype="multipart/form-data">
-        <input class="form-control" accept="image/png, image/jpeg" type="file" name="file" />
-        <input class="btn btn-primary mt-2" type="submit" value="Upload" onclick="modal()"/>
+        <input
+          class="form-control"
+          accept="image/png, image/jpeg"
+          type="file"
+          name="file"
+          id="photo"
+        />
+        <input
+          class="btn btn-primary mt-2"
+          type="submit"
+          value="Upload"
+          onclick="modal()"
+        />
       </form>
     </div>
     {%include "loading.html"%}
@@ -23,4 +34,16 @@
   function modal() {
     $(".modal").modal("show");
   }
+  $("#photo").on("change", function () {
+    $(".modal").modal("show");
+    new Compressor(this.files[0], {
+      quality: 0.4,
+      success(result) {
+        $("#photo").prop("value", result);
+      },
+    });
+    setTimeout(function () {
+      $("#modalLoading").modal("toggle");
+    }, 3000);
+  });
 </script>
