--- a/templates/index.html
+++ b/templates/index.html
@@ -97,4 +97,8 @@
       },
     },
   });
+  $(document).on("click", ".owl-item", function () {
+    owlIndex = $(this).index();
+    console.log(owlIndex);
+  });
 </script>
